--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -22,7 +22,7 @@
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
-          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" />
+          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" onAction="#logout"/>
         </buttons>
       </ButtonBar>
     <SplitPane dividerPositions="0.1475501113585746, 0.7511135857461024" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
@@ -39,7 +39,7 @@
             </Label>
                   <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" />
                   <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm"/>
-                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" />
+                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo"/>
                   <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup" />
           </children>
         </AnchorPane>
@@ -61,6 +61,15 @@
                   <TextField fx:id="itemSearchName" disable="true" layoutX="185.0" layoutY="86.0" promptText="item name" />
                   <Button fx:id="searchButton" disable="true" layoutX="21.0" layoutY="215.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Search item" />
                   <TextArea fx:id="procedure" disable="true" layoutX="21.0" layoutY="261.0" prefHeight="224.0" prefWidth="492.0" text="To return an item: &#10;&#10;1. Make sure the item is in storage&#10; &#10;2. Once complete, using item description and information, ask students questions about &#10;the item to make sure it is theirs. &#10;&#10;3. Once it is made sure they know the item, if applicable, do one of the following to verify&#10;ownership:&#10; -Ask them to unlock the electronic device&#10; -If no password is needed for the device, ask if it is possible to provide receipts of &#10;  purchase" />
+                  <VBox>
+                    <ListView fx:id="requestListView" prefHeight="200.0" prefWidth="400.0" onMouseClicked="#handleRequestSelection" />
+                    <TextArea fx:id="requestDetailsArea" prefHeight="200.0" prefWidth="400.0" wrapText="true" editable="false" />
+                    <HBox spacing="10">
+                      <Button fx:id="markFoundButton" text="Mark as Found" onAction="#markAsFound" />
+                      <Button fx:id="markNotFoundButton" text="Mark as Not Found" onAction="#markAsNotFound" />
+                    </HBox>
+                  </VBox>
+
             <VBox fx:id="itemInputForm" layoutX="50.0" layoutY="80.0" spacing="5" alignment="CENTER" visible="false">
                   <Label text="Add New Item"/>
                   <HBox>
@@ -110,6 +119,7 @@
           </content>
         </ScrollPane>
         <AnchorPane>
+          <HBox>
           <children>
             <TableView fx:id="logTableView" >
                   <columns>
@@ -122,6 +132,7 @@
               </TableView>
           </children>
           <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
+          </HBox>
       </AnchorPane>
       </items>
     </SplitPane>
