--- a/src/com/Aggie_FindIt/RequestItem.fxml
+++ b/src/com/Aggie_FindIt/RequestItem.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
 <ScrollPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="com.Aggie_FindIt.RequestItemController">
     <content>
@@ -25,8 +21,13 @@
             <TextArea fx:id="itemDescriptionArea" maxWidth="300" prefRowCount="5" promptText="Item Description" />
             <ComboBox fx:id="categoryField" prefHeight="25.0" prefWidth="301.0" promptText="Category" visibleRowCount="5" />
             <ComboBox fx:id="locationField" prefHeight="25.0" prefWidth="301.0" promptText="Last Seen Location" visibleRowCount="5" />
-            <ComboBox fx:id="timeField" prefHeight="25.0" prefWidth="301.0" promptText="Last Seen Time" />
-            
+            <DatePicker fx:id="timeField" prefHeight="25.0" prefWidth="301.0" promptText="Last Seen Date" />
+            <HBox spacing="10" alignment="CENTER">
+                <Spinner fx:id="hourSpinner" prefHeight="25.0" prefWidth="100.0" />
+                <ComboBox fx:id="amPmField" prefHeight="25.0" prefWidth="100.0" promptText="AM/PM" />
+            </HBox>
+
+
             <Button onAction="#submitRequest" style="-fx-background-color: #007BFF; -fx-text-fill: white;" text="Submit Request" />
             
             <Label fx:id="statusLabel" style="-fx-text-fill: white;" />
