--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -37,10 +37,10 @@
                 <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
               </textFill>
             </Label>
-                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" />
-                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm"/>
-                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo"/>
-                  <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup" />
+                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" style="-fx-pref-width: 100"/>
+                  <Button layoutX="24.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm" style="-fx-pref-width: 100"/>
+                  <Button layoutX="24.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo" style="-fx-pref-width: 100"/>
+                  <Button layoutX="24.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup" style="-fx-pref-width: 100"/>
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -139,7 +139,7 @@
           <HBox>
               <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
               <Button fx:id="editItem" text="Edit" />
-              <Button fx:id="removeItem" text="Remove" />
+              <Button fx:id="removeItem" text="Remove" onAction="#removeItemButton" />
           </HBox>
           </VBox>
       </AnchorPane>
